# umasu

./: .env.example  .gitignore  Cargo.toml  README.md  run_identity_command.sh  run_identity_server.sh  run_support_cli.sh  run_support_server.sh
identity-server/: Cargo.toml
identity-server/src/: cli.rs  crypto.rs  db.rs  email.rs  handlers.rs  main.rs
identity-server/src/templates/: activation_email.html
support-cli/: Cargo.toml
support-cli/src/: api.rs  app.rs  main.rs  ui.rs
support-common/: Cargo.toml
support-common/src/: lib.rs
support-server/: Cargo.toml
support-server/src/: auth.rs  db.rs  main.rs
support-server/src/handlers/: admin.rs  user.rs
