[package]
name = "identity-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
resend-rs = "0.19"
tower_governor = "0.6"
