[package]
name = "support-cli"
version.workspace = true
edition.workspace = true

[dependencies]
support-common = { path = "../support-common" }
anyhow = "1"
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zip = "2"
