[package]
name = "support-server"
version.workspace = true
edition.workspace = true

[dependencies]
support-common = { path = "../support-common" }
axum = "0.8"
axum-extra = { version = "0.12", features = ["multipart"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
